# gift_card_recon_codex_complete

./: .gitattributes  .gitignore  AGENTS.md  CODEX_PROMPTS.md  Import-Gmail-Gift-Card-Activity.cmd  README.md  Run-Gift-Card-Reconciliation.cmd  Run-Monthly-Close.cmd  Run-Weekly-Reconciliation.ps1  install.ps1  pyproject.toml  run_monthly_close.ps1  run_recon.ps1  run_tests.ps1
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
_program/: check_operator_health.ps1  install.ps1  install_operator_assets.ps1  pyproject.toml  requirements.txt  run_monthly_close.ps1  run_tests.ps1  run_weekly.ps1  runtime.ps1
_program/maintenance/: consolidate_dropbox.ps1  deploy_operator_program.ps1  migrate_to_numbered_layout.ps1  test_install_operator_assets.ps1  test_migrate_to_numbered_layout.ps1  test_operator_tooling.ps1  test_runtime_reparse_guard.ps1
_program/tests/: test_actual_files_if_present.py  test_auto_run.py  test_close_assessment.py  test_evidence_archive.py  test_excel_writer_security.py  (+14 more)
docs/: GC_RECON_CLOSE_CONTROL_AND_DROPBOX_HARDENING_PLAN.md  NUMBERED_DROPBOX_MIGRATION_RUNBOOK.md
scripts/: new_period_folders.ps1  run_codex_review.ps1
templates/: 00 DROP DARDEN CREDIT MEMOS HERE.txt  00 DROP WEEKLY GIFT CARD ACTIVITY HERE.txt  00 START HERE - Gift Card Reconciliation.txt  Check Gift Card Reconciliation Health.cmd  Run Monthly Gift Card Close.cmd  Run Weekly Gift Card Reconciliation.cmd
tests/: test_actual_files_if_present.py  test_auto_run.py  test_gmail_activity_import.py  test_monthly_close.py  test_synthetic_reconciliation.py
(+49 files in other folders)
