[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gift-card-recon"
version = "0.1.0"
description = "Restaurant gift card reconciliation utility for summary, activity, and POS controls."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gift-card-recon = "gift_card_recon.cli:main"
gift-card-weekly-recon = "gift_card_recon.auto_run:main"
gift-card-monthly-close = "gift_card_recon.monthly_close:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
